--- a/index.html
+++ b/index.html
@@ -1294,7 +1294,7 @@ Accept change (<code style="color:#13b313">y = yes</code> [default], <code style
         <div class="row">
 <div class="col-sm-8 offset-sm-2">
 <div class="anchor-header is-active mt-3">
-  <a href="#faq-regex-good-enough"><i class="fas fa-link anchor-side-link"></i><h6 id="faq-regex-good-enough">Aren't regex approaches like sed good enough?</h6>
+  <a href="#faq-regex-good-enough"><i class="fas fa-link anchor-side-link"></i><h6 id="faq-regex-good-enough">Isn't a regex approach like sed good enough?</h6>
   </a>
 </div>
 </div>
@@ -1349,7 +1349,7 @@ if (scanf("%d&rpar; %d", &x, &y) == 2) // 2&rpar; if (scanf("%d&rpar; %d", &x, &
           <div class="col-sm-10 offset-sm-1">
             <div class="row">
 <div class="col-sm-8 offset-sm-2">
-<p class="lead">Custom linter checks and refactorings. See the <a href="https://catalog.comby.dev" class="inline-a">example
+<p class="lead"><code style="color:orange"><i class="fas fa-lightbulb"></i>&nbsp;</code> Custom linter checks and refactorings. See the <a href="https://catalog.comby.dev" class="inline-a">example
             catalog</a> for checks in existing
             tools.</p>
 </div>
@@ -1358,7 +1358,7 @@ if (scanf("%d&rpar; %d", &x, &y) == 2) // 2&rpar; if (scanf("%d&rpar; %d", &x, &
           <div class="col-sm-10 offset-sm-1">
             <div class="row">
 <div class="col-sm-8 offset-sm-2">
-<p class="lead">Bug hunting. Find unchecked functions, incorrect API calls, or
+<p class="lead"><code style="color:orange"><i class="fas fa-lightbulb"></i>&nbsp;</code> Bug hunting. Find unchecked functions, incorrect API calls, or
             copy-paste errors with structured matching that is easier and more
             powerful than regex.</p>
 </div>
@@ -1367,7 +1367,7 @@ if (scanf("%d&rpar; %d", &x, &y) == 2) // 2&rpar; if (scanf("%d&rpar; %d", &x, &
           <div class="col-sm-10 offset-sm-1">
             <div class="row">
 <div class="col-sm-8 offset-sm-2">
-<p class="lead">Temporarily changing or removing code for tests or analyses.
+<p class="lead"><code style="color:orange"><i class="fas fa-lightbulb"></i>&nbsp;</code> Temporarily changing or removing code for tests or analyses.
             Stubbing or changing code is useful for suppressing spurious
             warnings, and for refining static analyses or fuzzing.</p>
 </div>
@@ -1376,7 +1376,7 @@ if (scanf("%d&rpar; %d", &x, &y) == 2) // 2&rpar; if (scanf("%d&rpar; %d", &x, &
           <div class="col-sm-10 offset-sm-1">
             <div class="row">
 <div class="col-sm-8 offset-sm-2">
-<p class="lead">A custom templating engine. Because Comby understands balanced
+<p class="lead"><code style="color:orange"><i class="fas fa-lightbulb"></i>&nbsp;</code> A custom templating engine. Because Comby understands balanced
             delimiters generically, you can easily roll your own templating
             engine. This web page mixes <a href="https://github.com/comby-tools/comby.dev/blob/f2d2c11d15cf192daeadd3ff6e9da647a3b98d53/index.html.dyck#L221-L232" class="inline-a">HTML, LaTeX-like, and Markdown-like
             syntax</a>
@@ -1394,7 +1394,7 @@ if (scanf("%d&rpar; %d", &x, &y) == 2) // 2&rpar; if (scanf("%d&rpar; %d", &x, &
       language-specific formatter to preserve formatting (like <code>gofmt</code> for the
       Go language) after performing a change.</p>
 </div>
-</div>.
+</div>
 
       <div class="row">
 <div class="col-sm-8 offset-sm-2">
@@ -1406,34 +1406,38 @@ if (scanf("%d&rpar; %d", &x, &y) == 2) // 2&rpar; if (scanf("%d&rpar; %d", &x, &
 </div>
       <div class="row">
 <div class="col-sm-8 offset-sm-2">
-<p class="lead">Comby does not currently consider whitespace significant. We have plans
-      to support it though! The idea is that your declarative templates will
-      match on code that happens at the correct relative indentation level, for
-      languages like Python. Stay tuned! Of course, a lot of Python code is not
-      sensitive to whitespace indentation, so Comby is still useful (for
-      example, a lot of Python 2 to Python 3 conversions can be written with
-      Comby).</p>
+<p class="lead">Comby does not currently consider whitespace indentation significant.
+      We have plans to support it though! The idea is that your declarative
+      templates will match on code that happens at the correct relative
+      indentation level, for languages like Python. Stay tuned! Of course, a lot
+      of Python code is not sensitive to whitespace indentation, so Comby is
+      still useful (for example, a lot of Python 2 to Python 3 conversions can
+      be written with Comby).</p>
 </div>
 </div>
 
         <div class="row">
 <div class="col-sm-8 offset-sm-2">
 <div class="anchor-header is-active mt-3">
-  <a href="#faq-roadmap"><i class="fas fa-link anchor-side-link"></i><h6 id="faq-roadmap">What features are planned for the future?</h6>
+  <a href="#faq-roadmap"><i class="fas fa-link anchor-side-link"></i><h6 id="faq-roadmap">What features are currently in development or planned for the
+        future?</h6>
   </a>
 </div>
 </div>
-</div>
-        <div class="row">
+</div> <div class="row">
 <div class="col-sm-8 offset-sm-2">
-<p class="lead">See the <a href="https://github.com/comby-tools/comby/blob/master/docs/ROADMAP.md" class="inline-a">roadmap in the GitHub repository</a>.</p>
+<p class="lead">See the <a href="https://github.com/comby-tools/comby/blob/master/docs/FEATURE_TABLE.md" class="inline-a">feature
+        table</a>
+        and
+        <a href="https://github.com/comby-tools/comby/blob/master/docs/ROADMAP.md" class="inline-a">roadmap</a>
+        in the GitHub repository.</p>
 </div>
 </div>
 
         <div class="row">
 <div class="col-sm-8 offset-sm-2">
 <div class="anchor-header is-active mt-3">
-  <a href="#faq-gitter"><i class="fas fa-link anchor-side-link"></i><h6 id="faq-gitter">I need help writing a pattern, or other have questions.</h6>
+  <a href="#faq-gitter"><i class="fas fa-link anchor-side-link"></i><h6 id="faq-gitter">I need help writing a pattern or other have questions.</h6>
   </a>
 </div>
 </div>
