--- a/index.html
+++ b/index.html
@@ -788,7 +788,7 @@ code compared to standard regex approaches.">
 <code class="hl-bg-match"><code style="color:orange">:[[k]]</code>=<code style="color:orange">:[[v]]</code></code> to <code class="hl-bg-rewrite-smol">"<code><span class="hole">:[k]</span></code>": <code><span class="hole">:[v]</span></code></code>.
 The contents of the <code><span class="hole">:[args]</span></code> hole are overwritten if the rewrite pattern
 fires. Note that the left and right hand sides inside the <code class="hl-bg-source">{ ... }</code> need
-enclosing string quotes. This means that our pattern needs to escape the double qutes
+enclosing string quotes. This means that our pattern needs to escape the double quotes
 on the right hand side.</p>
 </div>
 </div>
